--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.pseudo</groupId>
     <artifactId>scala-tdd</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
     <name>scala-tdd</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
@@ -16,18 +16,32 @@
     <repositories>
 
         <repository>
+            <id>mvncentral</id>
+            <url>http://central.maven.org/maven2/</url>
+        </repository>
+
+        <repository>
             <id>artima</id>
             <name>Artima Maven Repository</name>
             <url>http://repo.artima.com/releases</url>
         </repository>
     </repositories>
 
+    <pluginRepositories>
+
+        <pluginRepository>
+            <id>mvncentral</id>
+            <url>http://central.maven.org/maven2/</url>
+        </pluginRepository>
+
+    </pluginRepositories>
+
     <dependencies>
 
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.11.1</version>
+            <version>2.11.8</version>
             <scope>compile</scope>
         </dependency>
 
