--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.12.3</version>
+            <version>2.12.8</version>
             <scope>compile</scope>
         </dependency>
 
@@ -125,6 +125,7 @@
             <scope>test</scope>
         </dependency>
 
+	<!-- poowermock -->
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
@@ -138,6 +139,7 @@
             <version>1.6.5</version>
             <scope>test</scope>
         </dependency>
+	<!-- poowermock -->
 
         <dependency>
             <groupId>info.cukes</groupId>
