--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pseudo</groupId>
-    <artifactId>scala-tdd</artifactId>
+    <artifactId>java-tdd</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    <name>scala-tdd</name>
+    <name>java-tdd</name>
 
     <properties>
         <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
         <scala.version>2.12.3</scala.version>
+        <jackson.version>2.10.0</jackson.version>
     </properties>
 
     <repositories>
@@ -74,19 +75,19 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.10</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.4</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-scala_2.12</artifactId>
-            <version>2.9.10</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- test -->
@@ -114,7 +115,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
 
