--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.13</version>
                 <configuration>
                     <includes>
                         <include>**/*Suite.class</include>
@@ -210,6 +210,12 @@
                     </includes>
                 </configuration>
             </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-site-plugin</artifactId>-->
+<!--                <version>3.7.1</version>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.scoverage</groupId>
