--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "groovy"
 
 version = "1.0"
-description = "Spock Framework - Example Project"
+description = "Java TDD"
 
 sourceCompatibility = 11
 
@@ -27,16 +27,17 @@ dependencies {
     implementation 'org.apache.groovy:groovy'
     testImplementation platform("org.spockframework:spock-bom:2.3-groovy-4.0")
     testImplementation "org.spockframework:spock-core"
-    testImplementation "org.spockframework:spock-junit4"  // you can remove this if your code does not rely on old JUnit 4 rules
 
-    // optional dependencies for using Spock
     testImplementation "org.hamcrest:hamcrest-core:2.2"   // only necessary if Hamcrest matchers are used
     testRuntimeOnly 'net.bytebuddy:byte-buddy:1.12.17' // allows mocking of classes (in addition to interfaces)
     testRuntimeOnly "org.objenesis:objenesis:3.3"      // allows mocking of classes without default constructor (together with ByteBuddy or CGLIB)
 
     // dependencies used by examples in this project
     testRuntimeOnly "com.h2database:h2:2.1.214"
-    implementation "org.apache.groovy:groovy-sql"
+    testImplementation "org.apache.groovy:groovy-sql"
+
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
 test {
